--- a/.prev/incubator_pipeline.ipynb
+++ b/.prev/incubator_pipeline.ipynb
@@ -5,7 +5,7 @@
    "id": "eb4a27e5",
    "metadata": {},
    "source": [
-    "# Neonatal Incubator Display Reader\n",
+    "# Neonatal Incubator Display Reader Pipeline\n",
     "\n",
     "This notebook demonstrates the complete **end-to-end workflow** for developing an automated system to detect and extract vital sign readings from neonatal incubator displays. The pipeline includes:\n",
     "\n",
@@ -39,23 +39,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "352626d7",
-   "metadata": {},
-   "source": [
-    "## Environment Setup and Dependency Installation\n",
-    "\n",
-    "This cell installs all required Python packages for the pipeline:\n",
-    "\n",
-    "- **NumPy and SciPy** - Numerical computing libraries with specific versions for compatibility\n",
-    "- **EasyOCR** - Optical Character Recognition library for text extraction\n",
-    "- **Ultralytics** - YOLOv8 implementation for object detection\n",
-    "- **Protobuf and TensorBoard** - Dependencies for model training visualization and logging\n",
-    "\n",
-    "**Note:** Run this cell only once per kernel session. The `--quiet` flag suppresses verbose installation output.\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "f07dffd2",
@@ -82,6 +65,87 @@
     "# Fix TensorBoard compatibility issues\n",
     "%pip install --user --quiet --upgrade protobuf==3.20.3\n",
     "%pip install --user --quiet tensorboard==2.14.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fe51f53",
+   "metadata": {},
+   "source": [
+    "## Environment Setup and Dependency Installation\n",
+    "\n",
+    "This cell installs all required Python packages for the pipeline:\n",
+    "\n",
+    "- **NumPy and SciPy** - Numerical computing libraries with specific versions for compatibility\n",
+    "- **EasyOCR** - Optical Character Recognition library for text extraction\n",
+    "- **Ultralytics** - YOLOv8 implementation for object detection\n",
+    "- **Protobuf and TensorBoard** - Dependencies for model training visualization and logging\n",
+    "\n",
+    "**Note:** Run this cell only once per kernel session. The `--quiet` flag suppresses verbose installation output.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d84df48",
+   "metadata": {},
+   "source": [
+    "## Troubleshooting: TensorBoard and Protobuf Compatibility\n",
+    "\n",
+    "**Issue:** The Ultralytics YOLO library may encounter compatibility issues between TensorBoard and Protobuf versions, resulting in `ImportError` or `AttributeError` exceptions.\n",
+    "\n",
+    "**Solution:** If you encounter such errors, execute the cell below to reinstall compatible versions of both packages. After running the fix, **restart the kernel** and re-run the notebook from the beginning.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "a377e810",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fixing TensorBoard and Protobuf compatibility issues...\n",
+      "This may take a moment...\n",
+      "\n",
+      "✓ Executed: uninstall -y protobuf\n",
+      "✓ Executed: uninstall -y tensorboard\n",
+      "✓ Executed: install --user protobuf==3.20.3\n",
+      "✓ Executed: install --user tensorboard==2.14.0\n",
+      "\n",
+      "✓ Compatibility fixes applied. Please restart the kernel and re-run from the beginning.\n",
+      "(Kernel → Restart Kernel)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fix TensorBoard/Protobuf compatibility issues\n",
+    "import subprocess\n",
+    "import sys\n",
+    "\n",
+    "print(\"Fixing TensorBoard and Protobuf compatibility issues...\")\n",
+    "print(\"This may take a moment...\\n\")\n",
+    "\n",
+    "# Uninstall and reinstall with correct versions\n",
+    "commands = [\n",
+    "    [sys.executable, \"-m\", \"pip\", \"uninstall\", \"-y\", \"protobuf\"],\n",
+    "    [sys.executable, \"-m\", \"pip\", \"uninstall\", \"-y\", \"tensorboard\"],\n",
+    "    [sys.executable, \"-m\", \"pip\", \"install\", \"--user\", \"protobuf==3.20.3\"],\n",
+    "    [sys.executable, \"-m\", \"pip\", \"install\", \"--user\", \"tensorboard==2.14.0\"],\n",
+    "]\n",
+    "\n",
+    "for cmd in commands:\n",
+    "    try:\n",
+    "        result = subprocess.run(cmd, capture_output=True, text=True, check=False)\n",
+    "        print(f\"✓ Executed: {' '.join(cmd[3:])}\")\n",
+    "        if result.returncode != 0 and \"not installed\" not in result.stdout.lower():\n",
+    "            print(f\"  Warning: {result.stderr[:100]}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"  Error: {e}\")\n",
+    "\n",
+    "print(\"\\n✓ Compatibility fixes applied. Please restart the kernel and re-run from the beginning.\")\n",
+    "print(\"(Kernel → Restart Kernel)\")"
    ]
   },
   {
@@ -234,6 +298,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "62553566",
+   "metadata": {},
+   "source": [
+    "### Dataset Exploration\n",
+    "\n",
+    "This section performs **exploratory data analysis** on the input images to understand:\n",
+    "\n",
+    "- **Image resolutions** and dimensions\n",
+    "- **Brightness distribution** across different lighting conditions\n",
+    "- **Visual characteristics** of dark and light display themes\n",
+    "\n",
+    "**Key Observation:** The dataset contains displays with varying lighting conditions. **Grayscale conversion** and **histogram equalization** will be applied during OCR preprocessing to standardize input and improve text recognition accuracy.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c9e0856b",
    "metadata": {},
    "source": [
@@ -330,38 +410,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "d08f4c4b",
-   "metadata": {},
-   "source": [
-    "### Dataset Exploration\n",
-    "\n",
-    "This section performs **exploratory data analysis** on the input images to understand:\n",
-    "\n",
-    "- **Image resolutions** and dimensions\n",
-    "- **Brightness distribution** across different lighting conditions\n",
-    "- **Visual characteristics** of dark and light display themes\n",
-    "\n",
-    "**Key Observation:** The dataset contains displays with varying lighting conditions. **Grayscale conversion** and **histogram equalization** will be applied during OCR preprocessing to standardize input and improve text recognition accuracy.\n",
-    "\n",
-    "\n",
-    "### Brightness Analysis\n",
-    "\n",
-    "This cell analyzes the **brightness distribution** across the entire dataset:\n",
-    "\n",
-    "**Function:** `compute_brightness()`\n",
-    "\n",
-    "- Converts each image to grayscale\n",
-    "- Calculates mean pixel intensity (0-255 scale)\n",
-    "- Lower values indicate darker images, higher values indicate brighter images\n",
-    "\n",
-    "**Output:** Statistical summary showing minimum, maximum, mean, and standard deviation of brightness values across all images.\n",
-    "\n",
-    "**Application:** Helps determine if preprocessing steps like histogram equalization are necessary to handle varying lighting conditions.\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "4f44a88a",
@@ -397,6 +445,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3d13ab4c",
+   "metadata": {},
+   "source": [
+    "### Brightness Analysis\n",
+    "\n",
+    "This cell analyzes the **brightness distribution** across the entire dataset:\n",
+    "\n",
+    "**Function:** `compute_brightness()`\n",
+    "\n",
+    "- Converts each image to grayscale\n",
+    "- Calculates mean pixel intensity (0-255 scale)\n",
+    "- Lower values indicate darker images, higher values indicate brighter images\n",
+    "\n",
+    "**Output:** Statistical summary showing minimum, maximum, mean, and standard deviation of brightness values across all images.\n",
+    "\n",
+    "**Application:** Helps determine if preprocessing steps like histogram equalization are necessary to handle varying lighting conditions.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f3cc963d",
    "metadata": {},
    "source": [
@@ -428,17 +496,9 @@
     "\n",
     "5. Annotate all images (recommended: start with 100 images, then iterate)\n",
     "\n",
-    "6. Export annotations in **YOLO format**\n",
+    "6. Export annotations in **YOLO format** or **Label Studio JSON format**\n",
     "\n",
     "**Best Practice:** Maintain consistent annotation quality by having multiple annotators review critical samples and resolve discrepancies.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "98ac6acc",
-   "metadata": {},
-   "source": [
-    "![Labelling](../screenshots/Screenshot01.png)\n"
    ]
   },
   {
@@ -471,35 +531,6 @@
     "- `YOLO_DATA_DIR` contains both `images/` and `labels/` subdirectories with matching files\n",
     "\n",
     "**Action Required:** If annotations are not yet complete, return to the Label Studio workflow section. Once the directory structure is ready, uncomment the example function calls (lines starting with `#`) to execute the split, training, and evaluation steps.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dd6f95f1",
-   "metadata": {},
-   "source": [
-    "### Dataset Splitting Function\n",
-    "\n",
-    "This cell defines the `split_dataset()` function to divide annotated data into train/validation/test sets:\n",
-    "\n",
-    "**Key Features:**\n",
-    "\n",
-    "- **Proportional Split** - Default: 70% train, 20% validation, 10% test\n",
-    "- **Pair Validation** - Ensures each image has a corresponding label file\n",
-    "- **Random Shuffling** - Uses seed for reproducible splits\n",
-    "- **Error Handling** - Reports missing labels and validates directory structure\n",
-    "\n",
-    "**Process:**\n",
-    "\n",
-    "1. Locates all image files in the images directory\n",
-    "2. Finds matching label files in the labels directory\n",
-    "3. Randomly shuffles valid image-label pairs\n",
-    "4. Splits pairs according to specified proportions\n",
-    "5. Copies files to separate train/val/test subdirectories\n",
-    "\n",
-    "**Output:** Returns the split root directory path and prints split statistics.\n",
-    "\n",
-    "**Note:** Uncomment the last line when YOLO-formatted annotations are ready.\n"
    ]
   },
   {
@@ -601,6 +632,35 @@
   },
   {
    "cell_type": "markdown",
+   "id": "07e4c599",
+   "metadata": {},
+   "source": [
+    "### Dataset Splitting Function\n",
+    "\n",
+    "This cell defines the `split_dataset()` function to divide annotated data into train/validation/test sets:\n",
+    "\n",
+    "**Key Features:**\n",
+    "\n",
+    "- **Proportional Split** - Default: 70% train, 20% validation, 10% test\n",
+    "- **Pair Validation** - Ensures each image has a corresponding label file\n",
+    "- **Random Shuffling** - Uses seed for reproducible splits\n",
+    "- **Error Handling** - Reports missing labels and validates directory structure\n",
+    "\n",
+    "**Process:**\n",
+    "\n",
+    "1. Locates all image files in the images directory\n",
+    "2. Finds matching label files in the labels directory\n",
+    "3. Randomly shuffles valid image-label pairs\n",
+    "4. Splits pairs according to specified proportions\n",
+    "5. Copies files to separate train/val/test subdirectories\n",
+    "\n",
+    "**Output:** Returns the split root directory path and prints split statistics.\n",
+    "\n",
+    "**Note:** Uncomment the last line when YOLO-formatted annotations are ready.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "97fdc90d",
    "metadata": {},
    "source": [
@@ -613,33 +673,6 @@
     "- Class names\n",
     "\n",
     "This configuration ensures the model correctly maps predictions to the appropriate vital sign categories.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "926896dd",
-   "metadata": {},
-   "source": [
-    "### Create YAML Configuration and Verify Data\n",
-    "\n",
-    "This cell performs two critical tasks:\n",
-    "\n",
-    "**1. YAML Configuration Generation** (`write_data_yaml()` function):\n",
-    "\n",
-    "- Creates the `data.yaml` file required by Ultralytics YOLO\n",
-    "- Specifies paths to train/val/test image directories\n",
-    "- Defines number of classes and class names\n",
-    "- Saves configuration to the split root directory\n",
-    "\n",
-    "**2. Data Verification**:\n",
-    "\n",
-    "- Checks if YOLO-formatted data exists in expected directories\n",
-    "- Counts available images and labels\n",
-    "- Automatically creates dataset splits if data is found\n",
-    "- Generates YAML configuration file\n",
-    "- Provides clear error messages if data is missing\n",
-    "\n",
-    "**Output:** Confirmation of successful YAML creation with file path, or instructions if data preparation is needed.\n"
    ]
   },
   {
@@ -712,6 +745,33 @@
   },
   {
    "cell_type": "markdown",
+   "id": "849dd527",
+   "metadata": {},
+   "source": [
+    "### Create YAML Configuration and Verify Data\n",
+    "\n",
+    "This cell performs two critical tasks:\n",
+    "\n",
+    "**1. YAML Configuration Generation** (`write_data_yaml()` function):\n",
+    "\n",
+    "- Creates the `data.yaml` file required by Ultralytics YOLO\n",
+    "- Specifies paths to train/val/test image directories\n",
+    "- Defines number of classes and class names\n",
+    "- Saves configuration to the split root directory\n",
+    "\n",
+    "**2. Data Verification**:\n",
+    "\n",
+    "- Checks if YOLO-formatted data exists in expected directories\n",
+    "- Counts available images and labels\n",
+    "- Automatically creates dataset splits if data is found\n",
+    "- Generates YAML configuration file\n",
+    "- Provides clear error messages if data is missing\n",
+    "\n",
+    "**Output:** Confirmation of successful YAML creation with file path, or instructions if data preparation is needed.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3fd7c947",
    "metadata": {},
    "source": [
@@ -727,37 +787,6 @@
     "- **Patience:** Early stopping threshold to prevent overfitting\n",
     "\n",
     "**Note:** Adjust these parameters based on dataset size and available computational resources. Monitor training metrics to optimize performance.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4dede222",
-   "metadata": {},
-   "source": [
-    "### Train YOLOv8 Model\n",
-    "\n",
-    "This cell defines and executes the training function:\n",
-    "\n",
-    "**Function:** `train_detector()`\n",
-    "\n",
-    "**Parameters:**\n",
-    "\n",
-    "- `data_yaml` - Path to YAML configuration file\n",
-    "- `epochs=50` - Number of training iterations\n",
-    "- `imgsz=640` - Input image resolution\n",
-    "- `batch=16` - Batch size for training\n",
-    "- `model='yolov8n.pt'` - Pre-trained YOLO nano model as starting point\n",
-    "- `patience=20` - Early stopping patience to prevent overfitting\n",
-    "\n",
-    "**Training Process:**\n",
-    "\n",
-    "1. Initializes YOLO model from pre-trained weights\n",
-    "2. Trains on the prepared dataset with specified hyperparameters\n",
-    "3. Automatically validates on validation set after each epoch\n",
-    "4. Saves best model checkpoint based on validation performance\n",
-    "5. Logs training metrics (loss, mAP, precision, recall)\n",
-    "\n",
-    "**Output:** Returns trained model object and training results for further analysis.\n"
    ]
   },
   {
@@ -2535,6 +2564,37 @@
     "    return model, results\n",
     "\n",
     "detector, train_results = train_detector(data_yaml_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92bd1c88",
+   "metadata": {},
+   "source": [
+    "### Train YOLOv8 Model\n",
+    "\n",
+    "This cell defines and executes the training function:\n",
+    "\n",
+    "**Function:** `train_detector()`\n",
+    "\n",
+    "**Parameters:**\n",
+    "\n",
+    "- `data_yaml` - Path to YAML configuration file\n",
+    "- `epochs=50` - Number of training iterations\n",
+    "- `imgsz=640` - Input image resolution\n",
+    "- `batch=16` - Batch size for training\n",
+    "- `model='yolov8n.pt'` - Pre-trained YOLO nano model as starting point\n",
+    "- `patience=20` - Early stopping patience to prevent overfitting\n",
+    "\n",
+    "**Training Process:**\n",
+    "\n",
+    "1. Initializes YOLO model from pre-trained weights\n",
+    "2. Trains on the prepared dataset with specified hyperparameters\n",
+    "3. Automatically validates on validation set after each epoch\n",
+    "4. Saves best model checkpoint based on validation performance\n",
+    "5. Logs training metrics (loss, mAP, precision, recall)\n",
+    "\n",
+    "**Output:** Returns trained model object and training results for further analysis.\n"
    ]
   },
   {
