Implement code changes to enhance functionality and improve performance

--- a/notebooks/incubator_pipeline.ipynb
+++ b/notebooks/incubator_pipeline.ipynb
@@ -7,7 +7,18 @@
    "source": [
     "# Neonatal Incubator Display Reader\n",
     "\n",
-    "This notebook demonstrates the complete **end-to-end workflow** for developing an automated system to detect and extract vital sign readings from neonatal incubator displays. The pipeline includes:\n",
+    "This notebook demonstrates the complete **end-to-end workflow** for developing an automated system to detect and extract vital sign readings from neonatal incubator displays. \n",
+    "\n",
+    "\n",
+    "\n",
+    "![manualimage](../screenshots/manualwrittennotes.png)\n",
+    "\n",
+    "\n",
+    "incubator LCD display\n",
+    "\n",
+    "![lcdDisplay](../dataset/01518abf-WhatsApp_Image_2025-08-17_at_9.07.33_PM_1.jpeg)\n",
+    "\n",
+    "The pipeline includes:\n",
     "\n",
     "- **Object detection** using YOLOv8 to locate display regions\n",
     "- **Optical Character Recognition (OCR)** to extract numeric readings\n",
@@ -499,7 +510,7 @@
     "\n",
     "**Output:** Returns the split root directory path and prints split statistics.\n",
     "\n",
-    "**Note:** Uncomment the last line when YOLO-formatted annotations are ready.\n"
+    "\n"
    ]
   },
   {
@@ -644,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "2a56ebbe",
    "metadata": {},
    "outputs": [
@@ -700,10 +711,10 @@
     "        data_yaml_path = write_data_yaml(split_root, CLASS_NAMES)\n",
     "        print(f\"✓ Created data.yaml at: {data_yaml_path}\")\n",
     "    else:\n",
-    "        print(\"⚠️  No image/label files found in YOLO directories\")\n",
+    "        print(\"  No image/label files found in YOLO directories\")\n",
     "        print(\"Please ensure your data is properly formatted and try again\")\n",
     "else:\n",
-    "    print(\"⚠️  YOLO data directories not found\")\n",
+    "    print(\"  YOLO data directories not found\")\n",
     "    print(\"Please annotate your images and export in YOLO format first\")\n",
     "    print(\"Expected structure:\")\n",
     "    print(f\"  {yolo_images_dir}\")  \n",
@@ -2555,6 +2566,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "faeb4fac",
+   "metadata": {},
+   "source": [
+    "### Evaluate Model Performance\n",
+    "\n",
+    "This cell runs **validation metrics** on the trained detector:\n",
+    "\n",
+    "**Function:** `evaluate_detector()`\n",
+    "\n",
+    "**Evaluation Process:**\n",
+    "\n",
+    "- Runs model on validation dataset\n",
+    "- Computes standard object detection metrics\n",
+    "- Generates confusion matrix\n",
+    "- Calculates per-class performance statistics\n",
+    "\n",
+    "**Key Metrics Reported:**\n",
+    "\n",
+    "- **mAP50** - Mean Average Precision at IoU threshold 0.5\n",
+    "- **mAP50-95** - Mean Average Precision averaged across IoU thresholds 0.5-0.95\n",
+    "- **Precision** - Proportion of correct positive predictions\n",
+    "- **Recall** - Proportion of ground truth objects detected\n",
+    "- **F1-Score** - Harmonic mean of precision and recall\n",
+    "\n",
+    "**Output:** Prints comprehensive metrics object and returns for further analysis.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "6dba5d09",
@@ -2998,31 +3038,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d8e6c16",
+   "id": "bb28b2bf",
    "metadata": {},
    "source": [
-    "### Evaluate Model Performance\n",
+    "### Visualize Detection Results\n",
     "\n",
-    "This cell runs **validation metrics** on the trained detector:\n",
+    "This cell displays **prediction results** on sample images:\n",
     "\n",
-    "**Function:** `evaluate_detector()`\n",
+    "**Function:** `visualize_predictions()`\n",
     "\n",
-    "**Evaluation Process:**\n",
+    "**Process:**\n",
     "\n",
-    "- Runs model on validation dataset\n",
-    "- Computes standard object detection metrics\n",
-    "- Generates confusion matrix\n",
-    "- Calculates per-class performance statistics\n",
+    "1. Randomly selects a subset of images from the dataset\n",
+    "2. Runs model inference on each image\n",
+    "3. Draws bounding boxes around detected regions\n",
+    "4. Labels each detection with class name and confidence score\n",
+    "5. Displays annotated images\n",
     "\n",
-    "**Key Metrics Reported:**\n",
+    "**Parameters:**\n",
     "\n",
-    "- **mAP50** - Mean Average Precision at IoU threshold 0.5\n",
-    "- **mAP50-95** - Mean Average Precision averaged across IoU thresholds 0.5-0.95\n",
-    "- **Precision** - Proportion of correct positive predictions\n",
-    "- **Recall** - Proportion of ground truth objects detected\n",
-    "- **F1-Score** - Harmonic mean of precision and recall\n",
+    "- `conf=0.25` - Confidence threshold for displaying detections\n",
+    "- `max_images=5` - Maximum number of images to visualize\n",
     "\n",
-    "**Output:** Prints comprehensive metrics object and returns for further analysis.\n"
+    "**Purpose:** Visual verification that the detector correctly identifies and localizes vital sign display regions before proceeding to OCR extraction.\n"
    ]
   },
   {
@@ -3330,33 +3368,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea8d31e0",
-   "metadata": {},
-   "source": [
-    "### Visualize Detection Results\n",
-    "\n",
-    "This cell displays **prediction results** on sample images:\n",
-    "\n",
-    "**Function:** `visualize_predictions()`\n",
-    "\n",
-    "**Process:**\n",
-    "\n",
-    "1. Randomly selects a subset of images from the dataset\n",
-    "2. Runs model inference on each image\n",
-    "3. Draws bounding boxes around detected regions\n",
-    "4. Labels each detection with class name and confidence score\n",
-    "5. Displays annotated images\n",
-    "\n",
-    "**Parameters:**\n",
-    "\n",
-    "- `conf=0.25` - Confidence threshold for displaying detections\n",
-    "- `max_images=5` - Maximum number of images to visualize\n",
-    "\n",
-    "**Purpose:** Visual verification that the detector correctly identifies and localizes vital sign display regions before proceeding to OCR extraction.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "a4c39108",
    "metadata": {},
    "source": [
@@ -3373,6 +3384,53 @@
     "5. **Value Cleaning** - Remove non-numeric characters and normalize decimal points\n",
     "\n",
     "**Output:** Numeric readings with associated confidence scores for each vital sign parameter.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b138840",
+   "metadata": {},
+   "source": [
+    "### OCR Implementation and Integration\n",
+    "\n",
+    "This comprehensive cell implements the complete **OCR pipeline** for extracting numeric values from detected regions:\n",
+    "\n",
+    "**Key Components:**\n",
+    "\n",
+    "1. **EasyOCR Initialization** - Loads English language model with GPU acceleration if available\n",
+    "\n",
+    "2. **Image Preprocessing Functions:**\n",
+    "\n",
+    "   - `preprocess_roi()` - Applies grayscale conversion, histogram equalization, Gaussian blur, and 2x upscaling\n",
+    "   - `clean_numeric()` - Removes non-numeric characters and normalizes decimal points\n",
+    "\n",
+    "3. **Value Extraction:**\n",
+    "\n",
+    "   - `extract_value()` - Runs OCR on preprocessed ROI and returns text with confidence score\n",
+    "\n",
+    "4. **Visualization Configuration:**\n",
+    "\n",
+    "   - Defines colors, fonts, and drawing parameters for annotated images\n",
+    "   - `draw_label()` - Draws labeled rectangles on detection results\n",
+    "\n",
+    "5. **Main OCR Function:**\n",
+    "\n",
+    "   - `run_ocr_on_detection()` - Integrates YOLO detection with OCR extraction\n",
+    "   - Processes each detected bounding box\n",
+    "   - Extracts numeric values for vital sign parameters\n",
+    "   - Optionally returns annotated debug images\n",
+    "\n",
+    "6. **Helper Functions:**\n",
+    "   - `ensure_image_paths()` - Validates dataset availability\n",
+    "   - `ensure_detector()` - Locates and loads trained model weights\n",
+    "\n",
+    "**Execution:**\n",
+    "\n",
+    "- Automatically runs on a sample image\n",
+    "- Displays OCR results in tabular format\n",
+    "- Shows annotated image with detected values\n",
+    "\n",
+    "**Output:** Dictionary containing extracted values, bounding boxes, detection confidence, and OCR confidence for each vital sign parameter.\n"
    ]
   },
   {
@@ -3694,53 +3752,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "833ad46c",
-   "metadata": {},
-   "source": [
-    "### OCR Implementation and Integration\n",
-    "\n",
-    "This comprehensive cell implements the complete **OCR pipeline** for extracting numeric values from detected regions:\n",
-    "\n",
-    "**Key Components:**\n",
-    "\n",
-    "1. **EasyOCR Initialization** - Loads English language model with GPU acceleration if available\n",
-    "\n",
-    "2. **Image Preprocessing Functions:**\n",
-    "\n",
-    "   - `preprocess_roi()` - Applies grayscale conversion, histogram equalization, Gaussian blur, and 2x upscaling\n",
-    "   - `clean_numeric()` - Removes non-numeric characters and normalizes decimal points\n",
-    "\n",
-    "3. **Value Extraction:**\n",
-    "\n",
-    "   - `extract_value()` - Runs OCR on preprocessed ROI and returns text with confidence score\n",
-    "\n",
-    "4. **Visualization Configuration:**\n",
-    "\n",
-    "   - Defines colors, fonts, and drawing parameters for annotated images\n",
-    "   - `draw_label()` - Draws labeled rectangles on detection results\n",
-    "\n",
-    "5. **Main OCR Function:**\n",
-    "\n",
-    "   - `run_ocr_on_detection()` - Integrates YOLO detection with OCR extraction\n",
-    "   - Processes each detected bounding box\n",
-    "   - Extracts numeric values for vital sign parameters\n",
-    "   - Optionally returns annotated debug images\n",
-    "\n",
-    "6. **Helper Functions:**\n",
-    "   - `ensure_image_paths()` - Validates dataset availability\n",
-    "   - `ensure_detector()` - Locates and loads trained model weights\n",
-    "\n",
-    "**Execution:**\n",
-    "\n",
-    "- Automatically runs on a sample image\n",
-    "- Displays OCR results in tabular format\n",
-    "- Shows annotated image with detected values\n",
-    "\n",
-    "**Output:** Dictionary containing extracted values, bounding boxes, detection confidence, and OCR confidence for each vital sign parameter.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "0cce7764",
    "metadata": {},
    "source": [
@@ -3764,16 +3775,8 @@
     "- **RMSE (Root Mean Square Error)** - Sensitivity to large errors\n",
     "- Per-channel accuracy for each vital sign parameter\n",
     "\n",
-    "**Ground Truth Collection:** Manual labeling of a representative sample is required to compute these metrics accurately.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e518923e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "**Ground Truth Collection:** Manual labeling of a representative sample is required to compute these metrics accurately.\n",
+    "\n",
     "## Post-Processing and Value Validation\n",
     "\n",
     "Raw OCR output requires **medical validation** to ensure readings are physiologically realistic. This section implements a comprehensive validation framework:\n",
@@ -3797,7 +3800,7 @@
     "\n",
     "**For Single Image Analysis:** Invalid readings are rejected (output as None) rather than replaced.\n",
     "\n",
-    "**Important Note:** This implementation does **not** use temporal smoothing (previous value retention). Temporal smoothing with frame-to-frame state management is only applicable for **live video streams** in production deployment."
+    "**Important Note:** This implementation does **not** use temporal smoothing (previous value retention). Temporal smoothing with frame-to-frame state management is only applicable for **live video streams** in production deployment.\n"
    ]
   },
   {
